--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
 		"ejs": "^3.1.10",
 		"express": "^4.19.2",
 		"express-async-handler": "^1.2.0",
+		"express-mongo-sanitize": "^2.2.0",
+		"express-rate-limit": "^7.4.0",
 		"express-validator": "^7.1.0",
+		"express-xss-sanitizer": "^1.2.0",
+		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.1",
 		"morgan": "^1.10.0",
