--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"express-rate-limit": "^7.4.0",
 		"express-validator": "^7.1.0",
 		"express-xss-sanitizer": "^1.2.0",
+		"firebase": "^10.14.0",
+		"firebase-admin": "^12.6.0",
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.1",
